test/e2e/fixtures/grpc-acceptance/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-acceptance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-acceptance
  template:
    metadata:
      labels:
        app: grpc-acceptance
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: grpc-acceptance
            - name: KAT_BACKEND_TYPE
              value: grpc_echo
          ports:
            - containerPort: 8080
              name: grpc
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-acceptance
spec:
  selector:
    app: grpc-acceptance
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
      protocol: TCP
      appProtocol: grpc
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: grpc-acceptance
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /echo.EchoService/
  rewrite: ""
  grpc: true
  service: grpc-acceptance:8080
